with duplicate error

--- a/public/index.html
+++ b/public/index.html
@@ -39,10 +39,13 @@
     <section>
         <input id="title-form" class="input is-primary" type="text" placeholder="Dish name">
         <input id="tag-form" class="input is-primary" type="text" placeholder="tags">
-        <button id="submit-button" class="button is-info" onclick = "createCard()">
+        <button id="submit-button" class="button is-info is-centered" onclick = "createCard()">
           Create Dish!
         </button>
     
+    </section>
+    <section>
+        <input id="filter-form" class="input is-primary" type="text" placeholder="Search for a dish by tag">
     </section>
     
     <!-- ROW 1 -->
