--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   </head>
  <body>
     <!-- HERO -->
-    <section class="hero has-background-success-dark has-text-centered">
+    <section class="hero has-background-success has-text-centered">
       <div class="hero-body">
         <p class="title is-size-1">
           Food Dishes
